# Schwarz_DD_CHP_2020

./: .clang-format  .gitignore  CMakeLists.txt  Mesh.h  README.md  Sparse.cpp  Sparse.h  exe  input.txt  main.cpp  main.cpp_old  partitions.cpp  partitions.cpp~  partitions.h  partitions.h~  proc_num_0.In  proc_num_1.In  proc_num_2.In  proc_num_3.In  run  test.lyra
docs/: Doxyfile.in
docs/explain/: explain.tex
docs/report/: main.tex
docs/report/img/: appart.pdf_tex  communic.eps  dd.pdf_tex  dditer.pdf_tex  ddomega.pdf_tex  dirichlet_300x300_5_efficacity.eps  dirichlet_300x300_5_fitted.eps  dirichlet_300x300_5_iter.eps  dirichlet_300x300_5_relal2.eps  dirichlet_300x300_5_speedup.eps  dirichlet_300x300_5_time.eps  dirichlet_400x400_10_efficacity.eps  dirichlet_400x400_10_fitted.eps  dirichlet_400x400_10_iter.eps  dirichlet_400x400_10_relal2.eps  dirichlet_400x400_10_speedup.eps  dirichlet_400x400_10_time.eps  dirichlet_400x400_5_efficacity.eps  dirichlet_400x400_5_fitted.eps  dirichlet_400x400_5_iter.eps  dirichlet_400x400_5_relal2.eps  dirichlet_400x400_5_speedup.eps  dirichlet_400x400_5_time.eps  iter.eps  l1.eps  robin_300x300_5_efficacity.eps  robin_300x300_5_fitted.eps  robin_300x300_5_iter.eps  robin_300x300_5_relal2.eps  robin_300x300_5_speedup.eps  robin_300x300_5_time.eps  robin_400x400_10_efficacity.eps  robin_400x400_10_fitted.eps  robin_400x400_10_iter.eps  robin_400x400_10_relal2.eps  robin_400x400_10_speedup.eps  robin_400x400_10_time.eps  robin_400x400_5_efficacity.eps  robin_400x400_5_fitted.eps  robin_400x400_5_iter.eps  (+7 more)
src/: CMakeLists.txt
src/core/: boundaryconditions.cpp  boundaryconditions.hpp  common.hpp  core.hpp  enumlist.hpp  io.cpp  io.hpp  mesh.cpp  mesh.hpp  point.cpp  point.hpp  sparsematrix.cpp  sparsematrix.hpp  sparsesolver.cpp  sparsesolver.hpp  tools.cpp  tools.hpp
src/core-mpi/: core-mpi.hpp  lyra_mpi.cpp  lyra_mpi.hpp  lyra_sendreceive.cpp  lyra_sendreceive.hpp
src/generator-lyra/: main.cpp
src/lyra/: CMakeLists.txt  lyra_common.hpp  main.cpp
src/lyra/Data/: enumlist.hpp  mesh.hpp  point.hpp
src/lyra/IO/: io.cpp  io.hpp
src/lyra/LyraMPI/: lyrampi.cpp  lyrampi.hpp
src/lyra/Mesh/: mesh.hpp
src/lyra/SparseMatrix/: sparsematrix.hpp  tools.hpp
src/lyra/Sparsesolver/: sparsesolver.hpp
src/lyra/Tools/: tools.hpp
src/lyra/common_lyra/: lyra.hpp
src/lyra/common_lyra/IO/: io.cpp
src/lyra/common_lyra/SparseMatrix/: sparsematrix.hpp
src/lyra/core/: boundaryconditions.cpp  boundaryconditions.hpp  common.hpp  core.hpp  enumlist.hpp  io.cpp  io.hpp  mesh.cpp  mesh.hpp  point.cpp  point.hpp  sparsematrix.cpp  sparsematrix.hpp  sparsesolver.cpp  sparsesolver.hpp  tools.hpp
src/lyra/mpi/: lyra_mpi.cpp  lyra_mpi.hpp
src/lyra/partition-lyra/: cover.cpp  cover.hpp  forcustom.hpp  forgrowing.hpp  forgrowing.hpp_old  formetis.hpp  forregularcheck.hpp  forregularcols.hpp  forregularrows.hpp  forscotch.hpp  main.cpp
src/lyra/solve/: main.cpp
src/lyra/solver-lyra/: main.cpp
src/partition/: CMakeLists.txt  Mesh.cpp  Mesh.h  Sparse.h  main.cpp  partitions.cpp
src/partition-lyra/: cover.cpp  cover.hpp  main.cpp
src/solver-lyra/: main.cpp  solver.cpp  solver.hpp
